Add namespace for filtering, minor refactoring
